2005-09-15  Callum McKenzie  <callum@spooky-possum.org>

	* games-scores-dialog.gob: Bug fixing for the hilighting.

	* games-scores.c: 
	* games-scores.h: Add an add_category method and use it
	internally. This reduces code duplication and makes games with
	category lists that aren't hard-coded possible.

2005-09-14  Callum McKenzie  <callum@spooky-possum.org>

        * games-scores-backend.c: Implement file locking and rewrite the I/O
	routines to use a object-wide file descriptor.
	
	* games-scores-backend.c: Check whether the scores file has
	changed and update the list if it has.

	* games-scores.c: Add an ordered list of the categories and make
	the foreach iterator use it. This means we can fix the dialog's
	combo box ordering problem while retaining the hash for random
	lookups.

2005-09-13  Callum McKenzie  <callum@spooky-possum.org>

	* games-scores.c: Move GamesScorePrivate definition out of the
	public header. Add support for an empty category list.

2005-09-08  Callum McKenzie  <callum@spooky-possum.org>

	* games-network.c: 
	* games-network-dialog.c:
	* games-network.h: Change game_server -> games_network_server_name
	to try and get around naming conflicts. See bug #315473.

	* games-scores-dialog.gob: Hide the catbar when there is only one
	category (this is fixing a regression in the new code). Also mark
	as private public functions that are now unnecessary.

	* games-scores.c (games_scores_get_current): Pass the backend the
	rather than the name to generate the filename.

2005-09-07  Callum McKenzie  <callum@spooky-possum.org>

	* games-scores-backend.c (games_scores_backend_get_scores): Fix
	the ordering of the created scores list.

	* games-scores.c: Cut the overflow off correctly.

2005-09-02  Callum McKenzie  <callum@spooky-possum.org>

	* games-scores.c: 
	* games-scores-backend.c: Finally! The scores file gets written
	out. Still lots of issues, but the system is at least functional.

2005-09-01  Callum McKenzie  <callum@spooky-possum.org>
